@@ -1,5 +1,6 @@
 [2016-??-??] - Version 1.0.3dev
 	* Fixed crash when trying to read an empty file
+	* Added PECL package.xml to allow installation via pecl
 
 [2016-06-23] - Version 1.0.2
 	* Fixed bug in ExcelSheet::addPictureDim() (see issue #120)
